--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "vendor_slug/package_slug",
-    "description": ":package_description",
+    "name": "hhhoegsted/laravel-remote",
+    "description": "Spatie Tutorial",
     "keywords": [
-        ":vendor_name",
+        "HHHoegsted",
         "laravel",
-        "package_slug"
+        "laravel-remote"
     ],
-    "homepage": "https://github.com/vendor_slug/package_slug",
+    "homepage": "https://github.com/hhhoegsted/laravel-remote",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Hans-Henrik Høgsted",
+            "email": "hh@debtia.dk",
             "role": "Developer"
         }
     ],
@@ -30,13 +30,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Hhhoegsted\\LaravelRemote\\": "src",
+            "Hhhoegsted\\LaravelRemote\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Hhhoegsted\\LaravelRemote\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -50,10 +50,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Hhhoegsted\\LaravelRemote\\LaravelRemoteServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\SkeletonFacade"
+                "LaravelRemote": "Hhhoegsted\\LaravelRemote\\LaravelRemoteFacade"
             }
         }
     },
