--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^8.0",
+        "illuminate/contracts": "^8.37",
         "spatie/laravel-package-tools": "^1.4.3",
-        "illuminate/contracts": "^8.37"
+        "spatie/ssh": "^1.6"
     },
     "require-dev": {
         "brianium/paratest": "^6.2",
@@ -51,10 +52,7 @@
         "laravel": {
             "providers": [
                 "Hhhoegsted\\LaravelRemote\\LaravelRemoteServiceProvider"
-            ],
-            "aliases": {
-                "LaravelRemote": "Hhhoegsted\\LaravelRemote\\LaravelRemoteFacade"
-            }
+            ]
         }
     },
     "minimum-stability": "dev",
